# cuda_ffn

./: .gitignore  CMakeLists.txt  README.md  run.sh
src/: CMakeLists.txt  fc.cu  ffn.cu
